tests/files/type_checker_tests/should_pass/363.cmdr
//Should allow recursion
fn a() {
	return a();
}
x = a();
