tests/files/type_checker_tests/should_fail/080.cmdr
//Should fail using uninitialized variable
fn foo(x: a) {
    return x;
}
